# langgraph-skill-agent

./: ._.vscode  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  agent_skills.py  compactor.py  docker-compose.milvus.yml  docker-compose.prod.yml  docker-compose.yml  intent_router.py  llm_json.py  plan_execute.py  pyproject.toml  rag copy.py  rag.py  requirements.txt  skill_docker_runner.py  summary.py  test.py  utility.py
.github/workflows/: build-image.yml  ci.yml  deploy.yml
.workflow/: BranchPipeline.yml  MasterPipeline.yml  PRPipeline.yml  branch-ci-v4.yml  branch-ci.yml
agent_memory/: Memory.md  Memory.md.bak.20260508T014743Z  soul.md  soul.md.bak.20260508T014743Z  user.md  user.md.bak.20260508T014743Z
deploy/cd/: README.md  deploy-remote.sh
deploy/ci/: README.md  run-quality-gate.sh
deploy/postgres/: ensure-databases.sh  init-databases.sh
skills/demo-greeting/: SKILL.md
skills/test-calc-script/: SKILL.md  run_calc.py  run_calc.sh
src/langgraph_skill_agent/: __init__.py  agent_core.py  deepseek_model.py  intent_router.py  plan_execute.py
src/langgraph_skill_agent/frontend/: __init__.py  app.py  orchestration.py
src/langgraph_skill_agent/memory/: __init__.py  blocks.py  compactor.py  context.py  conversation.py  pruning.py  session_store.py  summary.py  tokens.py
src/langgraph_skill_agent/multi_agent/: __init__.py  config.py  handoff.py  interactive.py  muti_agent_archreadme.md  roles.py  specialists.py  supervisor.py
src/langgraph_skill_agent/plan_execute/: __init__.py  core.py  interactive.py
src/langgraph_skill_agent/prompts/: __init__.py  manifest.json  registry.py
src/langgraph_skill_agent/rag/: __init__.py  rag_readme.md  retriever.py
src/langgraph_skill_agent/tool/: __init__.py  mcp_tools.py  skill_tools.py
src/langgraph_skill_agent/utility/: __init__.py  agent_policy.py  agent_runtime.py  agent_runtime_user_isolate.md  hitl.py  llm_json.py  logging_config.py  messages.py  orchestration_callbacks.py  paths.py  streaming.md  streaming.py  streaming_v3.md  tenant.py
storage/: docstore.json  index_store.json
tests/: conftest.py  test.py  test_milvus.py
tests/integration/: test_milvus.py
tests/unit/: test_agent_policy.py  test_agent_runtime.py  test_compactor.py  test_context.py  test_intent_router.py  test_llm_json.py  test_messages.py  test_multi_agent.py  test_multi_agent_config.py  test_paths.py  test_prompt_registry.py  test_pruning.py  test_rag_tenant.py  test_session_store.py  test_skill_tools.py  test_streaming_filters.py  test_tenant.py
workspace/default/: test_workspace.txt
